--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -94,7 +94,7 @@ jobs:
       - name: Release
         uses: softprops/action-gh-release@v1
         with:
-          files: OliveTin_*
+          files: go-repro_*
           tag_name: ${{ steps.create_tag.outputs.tag }}
           #body_path: rel_note.txt
         env:
